fix lang and contrast

--- a/themes/antonija/assets/scss/styles.scss
+++ b/themes/antonija/assets/scss/styles.scss
@@ -78,7 +78,7 @@ $secondary: #c63535;
 $third: #ce5555;
 $link: #ffecec;
 $title: #242c31;
-$tech: rgba(36, 44, 49, 0.42);
+$tech: rgb(103, 109, 113);
 $footer: #fbfbfb;
 
 
